// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty metar renders nothing 1`] = `
<div
  class="Metars"
>
  <div>
    No METAR is issued for this station.
  </div>
</div>
`;

exports[`empty metar renders nothing 2`] = `
<div
  class="Metars"
>
  <div>
    No METAR is issued for this station.
  </div>
</div>
`;

exports[`metar renders properly 1`] = `
<div
  class="Metars"
>
  <div
    class="notif-text"
  >
    METAR CYUL 071900Z 21011KT 15SM FEW022 FEW110 BKN170 OVC240 15/12 A3001 RMK CF1AC2AS4CS2 CF TR SLP165
  </div>
  <div
    class="notif-text"
  >
    METAR CYUL 071800Z 22011KT 15SM FEW016 FEW060 BKN130 OVC240 15/12 A3002 RMK SF1SC2AC5CI1 SF TR SLP169
  </div>
  <div
    class="notif-text"
  >
    METAR CYUL 071700Z 23008KT 15SM FEW012 FEW050 BKN120 OVC150 14/11 A3004 RMK SF1SC2AC3AC3 SF TR SLP173
  </div>
  <div
    class="notif-text"
  >
    SPECI CYUL 071621Z 22008KT 15SM FEW013 FEW060 BKN110 OVC160 13/11 A3005 RMK SF1SC2AC5AC1 SF TR SLP177
  </div>
</div>
`;

exports[`metar renders properly 2`] = `
<div
  class="Metars"
>
  <div
    class="notif-text"
  >
    METAR KJFK 071851Z 18019G26KT 10SM FEW030 SCT065 SCT120 SCT210 BKN250 24/19 A3009 RMK AO2 PK WND 18028/1828 SLP189 T02440189
  </div>
  <div
    class="notif-text"
  >
    METAR KJFK 071751Z 19020G25KT 10SM FEW025 SCT060 BKN110 BKN250 24/19 A3011 RMK AO2 PK WND 18027/1740 SLP195 T02390194 10244 20206 58021
  </div>
  <div
    class="notif-text"
  >
    METAR KJFK 071651Z 18018G24KT 10SM BKN060 BKN110 BKN250 23/19 A3014 RMK AO2 SLP206 T02330194
  </div>
  <div
    class="notif-text"
  >
    METAR KJFK 071551Z 18015KT 10SM SCT047 BKN110 BKN250 23/19 A3016 RMK AO2 SLP211 T02280189
  </div>
</div>
`;

exports[`metar renders properly 3`] = `
<div
  class="Metars"
>
  <div
    class="notif-text"
  >
    SPECI EGLL 071920Z 21009KT 9999 BKN007 OVC014 15/14 Q1010 BECMG FEW007 BKN045
  </div>
  <div
    class="notif-text"
  >
    METAR EGLL 071850Z 20009KT 5000 -RADZ FEW006 BKN009 OVC016 15/14 Q1010 REDZ
  </div>
  <div
    class="notif-text"
  >
    SPECI EGLL 071820Z AUTO 21009KT 180V250 4200 -DZ SCT007 OVC011 15/14 Q1011 TEMPO 6000 BKN006
  </div>
  <div
    class="notif-text"
  >
    SPECI EGLL 071750Z AUTO 21011KT 9999 BKN008 BKN016 14/14 Q1011 TEMPO 4000 RADZ
  </div>
  <div
    class="notif-text"
  >
    SPECI EGLL 071720Z AUTO 19012KT 8000 -RA SCT007/// BKN013/// BKN024/// //////TCU 14/14 Q1010
  </div>
  <div
    class="notif-text"
  >
    METAR EGLL 071650Z AUTO 19011KT 9999 -RA BKN006 OVC014 14/14 Q1011 TEMPO 4000 RADZ
  </div>
  <div
    class="notif-text"
  >
    METAR EGLL 071620Z AUTO 19009KT 150V230 7000 -RA BKN006/// OVC011/// //////TCU 14/13 Q1012 RERA REDZ TEMPO 4000 RADZ
  </div>
  <div
    class="notif-text"
  >
    METAR EGLL 071550Z AUTO 20011KT 170V250 7000 BKN007 OVC012 14/13 Q1012 TEMPO 4000 RADZ
  </div>
</div>
`;

exports[`metar renders properly 4`] = `
<div
  class="Metars"
>
  <div>
    No METAR is issued for this station.
  </div>
</div>
`;

exports[`metar renders properly 5`] = `
<div
  class="Metars"
>
  <div>
    No METAR is issued for this station.
  </div>
</div>
`;
